fixed refresh token and added "NONE" as a PostTag